# personal

./: .gitignore  Cargo.toml  README.md  cv.json  index.html  package-lock.json  package.json  style.css  svelte.config.js
src/: achievement.rs  achievements.rs  app.html  blog.svelte  contact.rs  education.rs  experience.rs  image.rs  language.rs  languages.rs  main.rs  nav.rs  net.rs  page.rs  pane.rs  profile.rs  project.rs  research.rs  skill.rs  styles.scss  talent.rs  test.rs  trait.rs  util.rs
src/blogs/: alternatives.rs  blog.rs  footnote.rs  medicine.rs  mod.rs  overview.rs
src/christmas/: mod.rs  overview.rs  play.rs  reveal.rs  songs.rs  start.rs  summary.rs  vec2.rs  wait.rs
src/home/: mod.rs
src/lib/: award.svelte  box.svelte  card.svelte  cite.svelte  media.svelte  navbar.svelte  paper.svelte  presentation.svelte  project.svelte
src/lib/figures/: pareto.svelte
src/lib/research/: cite.svelte  resources.svelte
src/lib/resume/: awards.svelte  courses.svelte  education.svelte  language.svelte  languages.svelte  traits.svelte  work.svelte
src/personalia/: contact.rs  data.json  mod.rs  profile.rs
src/research/: mod.rs  research.rs  topic.rs
src/resume/: awards.rs  education.rs  experience.rs  language.rs  mod.rs  programming.rs  project.rs  skill.rs  tags.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/_test/: +page.svelte
src/routes/blog/: +layout.svelte  +page.svelte
src/routes/blog/medicine/: +page.md
src/routes/blog/questions/: +page.md
src/routes/blog/tools/: +page.md
src/routes/demos/: +layout.svelte  +page.svelte
src/routes/projects/: +layout.svelte  +page.svelte
src/routes/research/: +layout.svelte  +page.svelte
src/routes/resume/: +page.svelte
src/src/: app.html  styles.scss
src/src/lib/: card.svelte  navbar.svelte
src/src/routes/: +page.svelte
static/: blogs.json  christmas.json  home.json  personalia.json  research.json  resume.json  styles.css  styles.css.map
static/resume/: data.json  keysight.avif
static/tensors/: vecs.npy
(+18 files in other folders)
