[package]
name = "personal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["icons", "simple", "props", "model"] }

web-sys = { version = "0.3", features = ["Window"] }

implicit-clone = { version = "0.4", features = ["serde", "map"] }
strum = { version = "0.25", features = ["derive"] }
serde = { version = "=1.0.192", features = ["derive"] }
serde_json = "1.0"